[package]
name = "wwup"
version = "0.1.0"
authors = ["hhatto <hhatto.jp@gmail.com>"]

[dependencies]
nix = "0.7"
libc = "*"

[[bin]]
name = "3_processes_have_ids"
path = "src/3_processes_have_ids.rs"

[[bin]]
name = "4_processes_have_parents"
path = "src/4_processes_have_parents.rs"

[[bin]]
name = "5_processes_have_file_descriptors"
path = "src/5_processes_have_file_descriptors.rs"

[[bin]]
name = "6_processes_have_resource_limits"
path = "src/6_processes_have_resource_limits.rs"

[[bin]]
name = "7_processes_have_an_environment"
path = "src/7_processes_have_an_environment.rs"
